rework broken performance subproject which hasn't been used much for a long time